update specification document

--- a/簡易仕様書.md
+++ b/簡易仕様書.md
@@ -12,6 +12,7 @@ SearchRestaurant
 - 現在地からの半径だけでなくジャンルやキーワードでも検索可能にしました。
 - シンプルで見やすいデザインを心がけました。
 - Appleの既存のアプリにレストランを表示できるようにしました。
+- 現在地からの半径の選択を必須とし、入力されていない場合には検索できないようにしました。
 
 ### 公開したアプリの URL（Store にリリースしている場合）
 なし
@@ -39,6 +40,7 @@ iOS 14.3
 
 ### 画面一覧
 - 検索画面：条件を指定（半径・ジャンル・キーワード）してレストランを検索する。
+  　　　　　ジャンル選択に関しては別画面で指定し検索画面に表示する。
 - 一覧画面：検索結果の飲食店を一覧表示する。その際に検索した内容も表示する。
 - 詳細画面：一覧表示から気になるレストランをタップして詳細表示する。
 
@@ -47,4 +49,5 @@ iOS 14.3
 
 ### アドバイスして欲しいポイント
 ソースを簡略化できそうな箇所を教えて欲しい。
+(特にJSONから値を配列に入れる際のソースをもう少し簡略化したい気持ちがある為)
 デザイン面での改善箇所を教えて欲しい。
