update specification document

--- a/簡易仕様書.md
+++ b/簡易仕様書.md
@@ -13,6 +13,7 @@ SearchRestaurant
 - シンプルで見やすいデザインを心がけました。
 - Appleの既存のアプリにレストランを表示できるようにしました。
 - 現在地からの半径の選択を必須とし、入力されていない場合には検索できないようにしました。
+- 緯度経度が取得できていない場合は検索ボタンが押された時にできない旨を伝えてプライバシーを変更するように促しました。
 
 ### 公開したアプリの URL（Store にリリースしている場合）
 なし
@@ -48,6 +49,6 @@ iOS 14.3
 - ホットペッパーグルメサーチAPI
 
 ### アドバイスして欲しいポイント
-ソースを簡略化できそうな箇所を教えて欲しい。
+- ソースを簡略化できそうな箇所を教えて欲しい。
 (特にJSONから値を配列に入れる際のソースをもう少し簡略化したい気持ちがある為)
-デザイン面での改善箇所を教えて欲しい。
+- デザイン面や使いやすさでの改善箇所を教えて欲しい。
