--- a/簡易仕様書.md
+++ b/簡易仕様書.md
@@ -10,10 +10,15 @@ SearchRestaurant
 
 #### こだわったポイント
 - 現在地からの半径だけでなくジャンルやキーワードでも検索可能にしました。
-- シンプルで見やすいデザインを心がけました。
 - Appleの既存のアプリにレストランを表示できるようにしました。
 - 現在地からの半径の選択を必須とし、入力されていない場合には検索できないようにしました。
 - 緯度経度が取得できていない場合は検索ボタンが押された時にできない旨を伝えてプライバシーを変更するように促しました。
+
+#### デザイン面でこだわったポイント
+- シンプルで見やすいデザインを心がけました。
+- 色を数色で統一することでまとまりのあるデザインを意識しました。
+- 検索できない時はボタンの色を変え、わかりやすくしました。
+- なるべくどの端末でも使えるようにレスポンシブ対応しました。
 
 ### 公開したアプリの URL（Store にリリースしている場合）
 なし
@@ -52,3 +57,12 @@ iOS 14.3
 - ソースを簡略化できそうな箇所を教えて欲しい。
 (特にJSONから値を配列に入れる際のソースをもう少し簡略化したい気持ちがある為)
 - デザイン面や使いやすさでの改善箇所を教えて欲しい。
+
+### 自己評価
+良い点
+- シンプルで使いやすいデザインにできたかなと思っています。
+- 画面遷移もわかりやすくできたかなと思います。
+- ソースのメモも多く書き、どこで何をしているのかをわかりやすく出来たと感じています。
+  
+改善点
+- JSONから値を取り込む際のソースが長くなって見にくいと感じるため、もう少し見やすいソースにできたらいいかなと思います。
