--- a/簡易仕様書.md
+++ b/簡易仕様書.md
@@ -1,7 +1,5 @@
 # 簡易仕様書サンプル
 
-### 作者
-田中勇輝
 ### アプリ名
 SearchRestaurant
 
@@ -45,8 +43,7 @@ iOS 14.3
 - 地図アプリ連携：飲食店の所在地を地図アプリに連携する。
 
 ### 画面一覧
-- 検索画面：条件を指定（半径・ジャンル・キーワード）してレストランを検索する。
-  　　　　　ジャンル選択に関しては別画面で指定し検索画面に表示する。
+- 検索画面：条件を指定（半径・ジャンル・キーワード）してレストランを検索する。ジャンル選択に関しては別画面で指定し検索画面に表示する。
 - 一覧画面：検索結果の飲食店を一覧表示する。その際に検索した内容も表示する。
 - 詳細画面：一覧表示から気になるレストランをタップして詳細表示する。
 
